Refactor document generation service for IBM BAW compatibility
- Updated JAXB imports from jakarta to javax in multiple classes.
- Enhanced BundledFontRegistry to extract fonts to temporary files for better font registration.
- Introduced BawDocumentService as a facade for generating PDFs with Base64 output for BAW integration.
- Added error handling in BawDocumentService to provide detailed error messages for template and JSON parsing issues.
- Created comprehensive tests for BawDocumentService and payload validation against the personal loan template.
- Added a new JSON test payload for personal loan applications.
- Documented usage and deployment instructions for the new BAW-compatible JAR.